--- a/tictactoe.html
+++ b/tictactoe.html
@@ -6,31 +6,72 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>TicTacToe</title>
     <script defer src="tictactoe.js"></script>
-    <link rel="stylesheet" type="text/css" href="tictactoe.css">
+	<link rel="stylesheet" type="text/css" href="tictactoe.css">
+	
 </head>
 <body>
-	<h1>Tic Tac Toe</h1>
 
- <table class="container">
+	<!-- <h1></h1>
+	<table>
+		<tr>
+		<td id="sq0"><div></div></td>
+		<td id="sq1"><div></div></td>
+		<td id="sq2"><div></div></td>
+		</tr>
+		<tr>
+		<td id="sq3"><div></div></td>
+		<td id="sq4"><div></div></td>
+		<td id="sq5"><div></div></td>
+		</tr>
+		<tr>
+		<td id="sq6"><div></div></td>
+		<td id="sq7"><div></div></td>
+		<td id="sq8"><div></div></td>
+		</tr>
+	</table>
+	<button>RESET GAME</button> -->
+
+	<!-- <h1>tic tac toe</h1>
+
+	<section class='container'>
+		<div id="c0r0"></div>
+		<div id="c0r1"></div>
+		<div id="c0r2"></div>
+
+		<div id="c1r0"></div>
+		<div id="c1r1"></div>
+		<div id="c1r2"></div>
+
+		<div id="c2r0"></div>
+		<div id="c2r1"></div>
+		<div id="c2r2"></div>
+	</section> -->
+
+
+<h2>Tic-Tac-Toe</h2>
+<h1></h1>
+
+ <table>
  	<tr>
- 		<td></td>
- 		<td class="vertical"></td>
- 		<td></td>
+ 		<td id="square0"><div></div></td>
+ 		<td class="vertical" id="square1"><div></div></td>
+ 		<td id="square2"><div></div></td>
  	</tr>
 
  	<tr>
- 		<td class="horizontal"></td>
- 		<td class="vertical horizontal"></td>
- 		<td class= "horizontal"></td>
+ 		<td class="horizontal" id="square3"><div></div></td>
+ 		<td class="vertical horizontal" id="square4"><div></div></td>
+ 		<td class= "horizontal" id="square5"><div></div></td>
  	</tr>
 
  	<tr>
- 		<td></td>
- 		<td class="vertical"></td>
- 		<td></td>
+ 		<td id="square6"><div></div></td>
+ 		<td class="vertical" id="square7"><div></div></td>
+ 		<td id="square8"><div></div></td>
  	</tr>
 
  </table>
+ <button>Replay</button>
     
 </body>
 </html>
