--- a/tictactoe.html
+++ b/tictactoe.html
@@ -5,8 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>TicTacToe</title>
-    <script defer src="tictactoe.js"></script>
 	<link rel="stylesheet" type="text/css" href="tictactoe.css">
+	<link href="https://fonts.googleapis.com/css?family=Butcherman|Permanent+Marker|Sue+Ellen+Francisco&display=swap" rel="stylesheet">
+    <script defer src="tictactoe.js"></script>
 	
 </head>
 <body>
